// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio component The Rendered HTML should have a label 1`] = `
<div
  class="form-row_container"
>
  <label>
    My Checkbox Label
    <input
      name="radio"
      type="radio"
    />
  </label>
</div>
`;

exports[`Radio component The Rendered HTML should not be checked 1`] = `
<div
  class="form-row_container"
>
  <label>
    My Checkbox Label
    <input
      name="radio"
      type="radio"
    />
  </label>
</div>
`;

exports[`Radio component The Rendered HTML should not be checked 2`] = `
<input
  name="radio"
  type="radio"
/>
`;

exports[`Radio component The Rendered HTML should not be checked 3`] = `
<div
  class="form-row_container"
>
  <label>
    My Checkbox Label
    <input
      name="radio"
      type="radio"
    />
  </label>
</div>
`;

exports[`Radio component handling input should set a value when passed in 1`] = `
<div
  class="form-row_container"
>
  <label>
    My Checkbox Label
    <input
      checked=""
      name="radio"
      type="radio"
    />
  </label>
</div>
`;

exports[`Radio component handling input should update a value when changed in 1`] = `
<div
  class="form-row_container"
>
  <label>
    My Checkbox Label
    <input
      name="radio"
      type="radio"
    />
  </label>
</div>
`;
